force-app/main/default/objects/cgcloud__User_Document_Activity__c/cgcloud__User_Document_Activity__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between daily report and the user activity.</description>
    <label>Daily Report Activity</label>
    <nameField>
        <displayFormat>DRA-{000000}</displayFormat>
        <label>Daily Report Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Report Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>