force-app/main/default/objects/cgcloud__User_Document_Activity__c/fields/cgcloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration__c</fullName>
    <formula>cgcloud__Hours__c  * 60  +  cgcloud__Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>