force-app/main/default/objects/cgcloud__User_Document_Activity__c/fields/cgcloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>