force-app/main/default/objects/cgcloud__User_Document_Activity__c/fields/cgcloud__User_Document__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Document__c</fullName>
    <label>Daily Report</label>
    <referenceTo>cgcloud__User_Document__c</referenceTo>
    <relationshipLabel>Daily Report Activities</relationshipLabel>
    <relationshipName>User_Document_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>