force-app/main/default/objects/cgcloud__User_Document_Activity__c/validationRules/cgcloud__Duration_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Duration_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(cgcloud__Duration__c &lt; 0, cgcloud__Duration__c &gt; 1440)</errorConditionFormula>
    <errorMessage>The Duration Value must be a number between 0 and 1440.</errorMessage>
</ValidationRule>