force-app/main/default/objects/cgcloud__User_Document_Activity__c/validationRules/cgcloud__Hours_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Hours_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(cgcloud__Hours__c &lt; 0, cgcloud__Hours__c &gt; 24)</errorConditionFormula>
    <errorMessage>The Hours must be a number between 0 and 24.</errorMessage>
</ValidationRule>