force-app/main/default/objects/cgcloud__User_Document_Activity__c/validationRules/cgcloud__Minutes_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Minutes_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(cgcloud__Minutes__c &lt; 0, cgcloud__Minutes__c &gt; 59)</errorConditionFormula>
    <errorMessage>The Minutes must be a number between 0 and 59.</errorMessage>
</ValidationRule>